# seiri

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build.md
.github/workflows/: codeql.yml
branding/: Contents.json  icon.icns  seirinew.afdesign
branding/Complications/: Contents.json
branding/Plain/: Contents.json
branding/Typemark/: Contents.json
katatsuki-rs/: Cargo.toml
katatsuki-rs/src/: lib.rs  track.rs
katatsuki/katatsuki-rs/: Cargo.toml
katatsuki/katatsuki-rs/src/: lib.rs  track.rs
katatsuki/libkatatsuki-sys/: Cargo.toml  build.rs  wrapper.h
katatsuki/libkatatsuki-sys/libkatatsuki/: CMakeLists.txt  StringUtils.h  TrackData.cpp  TrackData.h  libkatatsuki.cpp  libkatatsuki.h  track_data.cpp  track_data.h  track_file_type.h
katatsuki/libkatatsuki-sys/libkatatsuki/src/: CTrack.cs  Lib.cs  Track.cs  libkatatsuki.csproj  nuget.config  rd.xml
katatsuki/libkatatsuki-sys/src/: lib.rs
libkatatsuki-sys/: Cargo.toml  build.rs
libkatatsuki-sys/libkatatsuki/src/: CTrack.cs  Lib.cs  TrackFileType.cs  libkatatsuki.csproj
libkatatsuki-sys/src/: lib.rs
seiri-client/: ensureConfig.js  index.html  main.js  package-lock.json  package.json  preload.js  seiri.VisualElementsManifest.xml  ui.asar  watcher.js
seiri-client-internals/: package-lock.json  package.json  tsconfig.json  tslint.json  ui.asar
seiri-client-internals/public/: index.html  seiri-worker.js  seiri-worker.js.map
seiri-client-internals/src/: App.test.tsx  App.tsx  BangHelper.css  BangHelper.tsx  ElectronWindow.ts  ErrorBoundary.tsx  List.tsx  SeiriContext.tsx  State.ts  Table.css  TrackTable.tsx  View.css  View.tsx  actions.ts  index.tsx  seiri-neon.d.ts  seiri-neon.ts  types.ts  utility.ts
seiri-client-service-worker/: .gitignore  package-lock.json  package.json  seiri-worker.ts  tsconfig.json  webpack.config.js
seiri-core/: Cargo.toml  foo.json  foo.txt
seiri-core/src/: bangs.rs  config.rs  database.rs  error.rs  graphql.rs  main.rs  paths.rs  taglibsharp.rs  time.rs  track.rs  utils.rs  watcher.rs
seiri-core/src/bangs/: argument_end_lexer.rs  bangs.rs  lexer.rs  mod.rs  parser.rs  time.rs
seiri-lib/: Cargo.toml
seiri-lib/src/: config.rs  database.rs  error.rs  lib.rs  paths.rs  taglibsharp.rs  track.rs
seiri-lib/src/bangs/: bangs.rs  lexer.rs  parser.rs  time.rs
seiri-neon/: README.md  package.json
seiri-neon/lib/: index.js
seiri-neon/native/: Cargo.toml
seiri-neon/native/src/: database.rs  error.rs  lib.rs  path.rs  track.rs
seiri-neon/native/src/bangs/: bangs.rs  lexer.rs
seiri-watcher/: Cargo.toml  foo.txt  stderr.md
seiri-watcher/src/: graphql.rs  main.rs  utils.rs  watcher.rs
taglibsharp-katatsuki/: readme.md
taglibsharp-katatsuki/src/: Program.cs  Track.cs  nuget.config  rd.xml  taglibsharp-katatsuki.csproj
win64/: tag_c.lib
