[package]
name = "seiri-core"
version = "0.1.0"
authors = ["Ronny Chan <ronny@ronnchyran.com>"]
include = ["tools/**/*"]

[dependencies]
notify = "4.0.3"
serde_json = "1.0.14"
quick-error = "1.2.1"
tree_magic = "0.2.0"
regex = "0.2.10"
lazy_static = "1.0.0"
itertools = "0.7.8"

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]