[package]
name = "seiri-core"
version = "0.1.0"
authors = ["Ronny Chan <ronny@ronnchyran.com>"]
include = ["tools/**/*"]

[dependencies]
seiri = "*"
notify = "4.0.3"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
tree_magic = "0.2.0"
regex = "0.2.10"
lazy_static = "1.0.0"
itertools = "0.7.8"
humantime = "1.1.1"
rand = "0.4.2"
app_dirs ="1.2.1"
toml = "0.4"
walkdir = "2"
chrono = "0.4"
r2d2_sqlite = "0.5.0"
r2d2 = "0.8.2"
rayon = { version = "1.0", optional = true }
rocket =  { version = "0.3.8", optional = true }
juniper = { version = "0.9.2", optional = true }
juniper_codegen = { version = "0.9.2", optional = true }
juniper_rocket = { version = "0.1.2", optiona = true }
rocket_cors = { version = "0.2.1", optional = true }

[features]
default = []
use_graphql = [
    "rocket_cors",
    "rayon",
    "juniper",
    "juniper_codegen",
    "rocket"
]



[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled", "functions"]
