[package]
name = "seiri"
version = "2.0.1"
authors = ["Ronny Chan <ronny@ronnchyran.com>"]
description = "Support library for seiri music manager"
license = "MIT"
edition = "2018"

[lib]
name = "seiri"

[dependencies]
quick-error = "1.2.1"
regex = "0.2.10"
itertools = "0.7.8"
humantime = "1.1.1"
rand = "0.4.2"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
app_dirs ="1.2.1"
r2d2_sqlite = "0.7.0"
r2d2 = "0.8.3"
toml = "0.4.6"
dirs = "1.0.3"
katatsuki = "1.0.7"

[dependencies.rusqlite]
version = "0.15.0"
features = ["bundled", "functions"]
