[package]
name = "seiri"
version = "2.0.4"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
description = "Support library for seiri music manager"
license = "MIT"
edition = "2018"

[lib]
name = "seiri"

[dependencies]
quick-error = "1.2.1"
regex = "1.4.2"
itertools = "0.7.8"
humantime = "1.1.1"
rand = "0.4.2"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
app_dirs ="1.2.1"
r2d2_sqlite = "0.17.0"
r2d2 = "0.8"
toml = "0.5"
dirs = "1.0.3"
katatsuki = "1.0.10"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled", "functions"]
