[package]
name = "seiri-watcher"
version = "0.1.0"
authors = ["Ronny Chan <ronny@ronnchyran.com>"]
include = ["tools/**/*"]


[dependencies]
notify = "4.0.3"
rand = "0.4.2"
walkdir = "2"
threadpool = "1.7.1"
seiri = "2.0"

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled", "functions"]

[patch.crates-io]
seiri = { path = "../seiri-lib", branch = "2.0.0" }
