[package]
name = "seiri-watcher"
version = "0.2.0"
authors = ["Ronny Chan <ronny@ronnchyran.com>"]
include = ["tools/**/*"]
edition = "2018"

[dependencies]
rand = "0.7"
walkdir = "2"
threadpool = "1.7.1"
crossbeam = "0.8.0"
leak = "0.1.2"
notify = "5.0.0-pre.4"
seiri = "2.0.11"

# [dependencies.seiri]
# path = "../seiri-lib"