[package]
name = "katatsuki"
version = "1.0.11"
edition = "2018"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
description = "TagLib-based Music Tag Library"
license = "MIT"
keywords = ["taglib", "music", "tags", "metadata"]
[dependencies]
libc = "0.2"
chrono = "0.4"
enum-primitive-derive = "0.2"
num-traits = "0.2"
imagesize = "0.8"
libkatatsuki-sys = "1.0.10"
