[package]
name = "libkatatsuki-sys"
version = "0.3.0"
authors = ["Ronny Chan <ronny6993@gmail.com>"]
links = "libkatatsuki"
description = "Rust bindings for the Track interface of katatsuki"
license = "MIT"
exclude = ["libkatatsuki/src/bin/, libkatatsuki/src/obj/"]

[dependencies]
libc = "0.2"

[build-dependencies]
semver = "0.9.0"
