[package]
name = "libkatatsuki-sys"
version = "1.0.11"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
links = "libkatatsuki"
description = "Rust bindings for the Track interface of katatsuki"
license = "MIT"
edition = "2018"

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
bindgen = "0.56.0"