[package]
name = "seiri-neon"
version = "0.1.0"
authors = ["Ronny Chan <ronny6993@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"

[lib]
name = "seiri_neon"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.6.0"

[dependencies]
num-traits = "0.2"
seiri = "2.0.12"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled", "functions"]

[dependencies.neon]
version = "0.6.0"
default-features = false
features = ["napi-runtime"]